--- a/index.html
+++ b/index.html
@@ -9,21 +9,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-
+    <div class="img-fondo" style="background-image: url(images/imgchigadogris.jpeg);" >
       <div class = "texto-izquierdo">
         <h1>SOFIA BECERRA</h1>
         <h4>Dejalo en Sof 😉/ Arq-Progr</h4>
-        <a href="https://www.keeppro.org/" target="_blank">Fundadora de KeepPro</a>
-        <img src="images/foto 1.jpeg" alt="Sofia foto" width="300px" class="circulo">
-
-        <p> Me considero alguien multifasetica, en general me gustan <br />
-          diferentes tipos de planes hiking, fiestas , ejercicio , viajar , <br />
-          me encanta la naturaleza, trato de mantenerme en constante aprendisaje .
-        </p>
-
-        <h3>"Haz lo que quieras en la vida, igual no vas a salir viva de ella"</h3>
-        <i class="fa-brands fa-facebook"></i>
+        <div class="center">
+        <div class="med-izq">
+          <img src="images/foto 1.jpeg" alt="Sofia foto" width="150px" class="circulo">
+          <a href="https://www.keeppro.org/" target="_blank">Fundadora de KeepPro</a>
+        </div>
+        <div class="med-der">
+          <p> Me considero alguien multifasetica, en general me gustan
+            diferentes tipos de planes hiking, fiestas , ejercicio , viajar ,
+            me encanta la naturaleza, trato de mantenerme en constante aprendisaje .
+          </p>
+        </div>
       </div>
-
+        <div class="frase">
+          <h3>"Haz lo que quieras en la vida, igual no vas a salir viva de ella"</h3>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
